--- a/index.html
+++ b/index.html
@@ -230,13 +230,15 @@
     </section>
 
     <div class="new-section" style="background-color: black; min-height: 100vh; display: flex; align-items: center; padding: 10px 50px; position: relative; z-index: 1;">
-        <div class="text-container" style="flex: 1; color: white; max-width: 50%;">
-            <h1 style="font-size: 3rem; margin-bottom: 20px;">¿Quién soy?</h1>
-            <p style="font-size: 1.2rem; line-height: 1.6;">
-                Lowlife. Coming soon.
-            </p>
-        </div>
-        <div class="image-container" style="flex: 1; text-align: right;">
+      
+      
+      <div class="text-container" style="flex: 1; color: white; max-width: 50%;">
+        <h1 style="font-size: 3rem; margin-bottom: 20px;">¿Quién soy?</h1>
+          <p style="font-size: 1.2rem; line-height: 1.6;">
+              Lowlife. Coming soon.
+          </p>
+      </div>
+        <div class="image-container" style="flex: 1; ">
             <img src="img/foto.jpg" alt="Imagen de la categoría" style="max-width: 90%; height: 95%; border-radius: 10px;">
         </div>
     </div>
