--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                                 <img src="img/mew2.jpg" alt="Imagen artículo 3">
                             </div>
                             <p style="font-size: 0.9rem; color: #888; text-align: center; margin: 10px 0;">February 23, 2025</p>
-                            <h2 style="font-size: 1.5rem; color: #333; margin: 10px; text-align: center;">Título del artículo 3</h2>
+                            <h2 style="font-size: 1.5rem; color: #333; margin: 10px; text-align: center;">Título del- artículo 3</h2>
                         </a>
                     </div>
                     <div class="swiper-slide">
@@ -239,7 +239,7 @@
           </p>
       </div>
         <div class="image-container" style="flex: 1; ">
-            <img src="img/foto.jpg" alt="Imagen de la categoría" style="max-width: 90%; height: 95%; border-radius: 10px;">
+            <img src="img/foto.jpg" alt="Imagen de la categoría" style="max-width: 90%; height: auto; border-radius: 10px; object-fit: cover;">
         </div>
     </div>
 
