--- a/index.html
+++ b/index.html
@@ -134,6 +134,11 @@
 .article:hover h2 {
     color: #000; /* Cambia el color del título al hacer hover */
 }
+@media (max-width: 768px) {
+  .main-section {
+    background-attachment: scroll;
+  }
+}
 
 
     </style>
