--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 }
 @media (max-width: 768px) {
   .main-section {
-    background-attachment: scroll;
+    background-attachment: scroll !important;
   }
 }
 
