--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Lowlife Magazine">
+    <meta property="og:description" content="Revista digital para creativos">
+    <meta property="og:image" content="https://raw.githubusercontent.com/1loro/lowlife/refs/heads/main/img/1.gif"> 
+    <meta property="og:url" content="https://1loro.github.io/lowlife/"> 
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="es_ES">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="img/1.gif">
     <link rel="preconnect" href="https://fonts.googleapis.com">
