--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta property="og:url" content="https://1loro.github.io/lowlife/"> 
     <meta property="og:type" content="website">
     <meta property="og:locale" content="es_ES">
+    <meta name="description" content="Revista digital para creativos. Descubre tendencias, entrevistas y artículos exclusivos en Lowlife Magazine.">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="img/1.gif">
     <link rel="preconnect" href="https://fonts.googleapis.com">
