--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Lowlife Magazine">
     <meta property="og:description" content="Revista digital para creativos">
-    <meta property="og:image" content="https://raw.githubusercontent.com/1loro/lowlife/refs/heads/main/img/1.gif"> 
+    <meta property="og:image" content="https://github.com/1loro/lowlife/blob/main/img/logo.png?raw=true"> 
     <meta property="og:url" content="https://1loro.github.io/lowlife/"> 
     <meta property="og:type" content="website">
     <meta property="og:locale" content="es_ES">
