--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <a href="https://1loro.github.io/lowlife/index.html">
                 <img src="img/1.gif" alt="logo">
             </a>
-            <a href="#">Low Life</a>
+            <a href="#">Lowlife</a>
         </div>
 
         <nav class="navbar">
