--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ header.hidden {
     </div>
     <div class="new-section" style="background-color: black; min-height: 100vh; display: flex; align-items: center; position: relative; z-index: 1;">
         <div class="text-container" style="flex: 1; color: white; max-width: 50%;">
-            <h1 style="font-size: 3rem; margin-bottom: 20px;">¿Quién soy?</h1>
+            <h1 style="font-size: 3rem; margin-bottom: 20px;">Moda</h1>
             <p style="font-size: 1.2rem; line-height: 1.6;">
                 Lowlife. Coming soon.
             </p>
