--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website">
     <meta property="og:locale" content="es_ES">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="img/1.gif">
+    <link rel="icon" href="https://raw.githubusercontent.com/1loro/lowlife/refs/heads/main/img/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
