--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@ header.hidden {
         <div class="text-container" style="flex: 1; color: rgb(255, 255, 255); text-align: center;">
             <h1 style="font-size: 3rem; margin-bottom: 20px; padding-top: 2rem;">Entrevistas</h1>
             <p style="font-size: 1.2rem; line-height: 1.6;">
-                Desliza para conoce a nuestros lowlifers.
+                Desliza para conocer a nuestros lowlifers.
             </p>
         </div>
         <div class="image-container" style="flex: 1; ">
