--- a/contacto.html
+++ b/contacto.html
@@ -149,15 +149,11 @@
 
     <section>
         <div class="container">
-            <h1>About Us</h1>
+            <h1>Contacto</h1>
             <div class="contact-info">
-                <p class="description">
-                    Lowlife es un grupo conformado por diversos creativos buscando difundir el arte en todas sus formas, ya sea: moda, fotografía, diseño, música, etc.
-        
-        Nos enfocamos en exponer esa voz que mucha veces queda silenciada en un mundo lleno de ruido.
-        
-        Buscamos trabajos y propuestas con un estilo único, personal y sincero asociados a conceptos como: creatividad, diversidad, contemporaneo, libertad, atemporal, etc.
-                </p>    
+                <p>Para cualquier consulta, puedes escribirnos a:</p>
+                <p><strong></strong> <a href="mailto:contacto@lowlife.com">contacto@lowlife.com</a></p>
+                <p><strong></strong> <a href="https://www.instagram.com/lowlife_magazine/" target="_blank">@lowlife_magazine</a></p>
             </div>
         </div>
     </section>
