--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+    <link rel="icon" href="img/1.gif">
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="img/1.gif">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
