--- a/about.html
+++ b/about.html
@@ -126,6 +126,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
+            <a href="contacto.html">Contacto</a>
             <a href="https://www.instagram.com/lowlife_magazine/" target="_blank" class="instagram-icon">
                 <i class="fab fa-instagram"></i>
             </a>
@@ -141,6 +142,7 @@
            
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
+            <a href="about.html">Contacto</a>
             <a href="https://github.com/1loro" target="_blank" class="github-icon">
                 <i class="fab fa-github"></i>
             </a>
