--- a/about.html
+++ b/about.html
@@ -142,7 +142,7 @@
            
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
-            <a href="about.html">Contacto</a>
+            <a href="contacto.html">Contacto</a>
             <a href="https://github.com/1loro" target="_blank" class="github-icon">
                 <i class="fab fa-github"></i>
             </a>
