--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
     
-    <title>Lowlife - Contacto</title>
+    <title>Lowlife - About</title>
     <style>
         body {
             background-color: black;
